--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+</head>
+<body>
+<p>You will be redirected to the example website in 1 seconds.</p>
+<script>
+window.location.href = "https://t.me/zeestb1";
+</script>
+</html>
+<noscript>
+<p>This page requires JavaScript to function properly.</p>
+</noscript>
+
 #EXTINF:-1 tvg-id="DEFAULT" tvg-logo="29277.jpeg" group-title="ENGLISH | CANADA",WINTER WONDERLAND 
 http://zeestb1.online/smart4k.php?id=29407
 #EXTINF:-1 tvg-id="" tvg-logo="61252.jpg" group-title="ENGLISH | CANADA",WORLD IN TRUE 4K 
